--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -30,6 +30,7 @@ mime = "0.3"
 mime_guess = "2.0.0-alpha"
 percent-encoding = "1.0"
 v_htmlescape = "0.4"
+glob = "0.3"
 
 [dev-dependencies]
 actix-web = { version = "1.0.2", features=["ssl"] }
